trying to get the routing working - cant get to individual gigs

--- a/app/views/directives/gigThumbnail.html
+++ b/app/views/directives/gigThumbnail.html
@@ -1,7 +1,10 @@
-<a href="gig/{{gig.id}}">
+<a target="_self" href="gig/{{gig.id}}">
     <div class="well hoverwell">
         <div class="row">
-            <h2 class="span6">{{gig.name}}</h2>
+            <img src="{{gig.name}}" />
+        </div>
+        <div class="row">
+            <h2 class="span6">{{gig.imagUrl}}</h2>
         </div>
         <div class="row">
             <span class="span1">Date:</span>
