images for artist working - glyphicons showing

--- a/app/views/directives/gigThumbnail.html
+++ b/app/views/directives/gigThumbnail.html
@@ -1,10 +1,10 @@
 <a target="_self" href="gig/{{gig.id}}">
-    <div class="well hoverwell">
+    <div class="well hoverwell" style="background-image: linear-gradient(#484e55, #3a3f44 60%, #313539);">
         <div class="row">
-            <img src="{{gig.name}}" />
+            <img src="{{gig.imageUrl}}" style="width: 20%;" />
         </div>
         <div class="row">
-            <h2 class="span6">{{gig.imagUrl}}</h2>
+            <h2 class="span6">{{gig.name}}</h2>
         </div>
         <div class="row">
             <span class="span1">Date:</span>
