--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,7 +16,7 @@
 </div>
 </div>
 
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a class="btn btn-lg btn-success" ng-href="#/">Search <span class="glyphicon glyphicon-search"></span></a></p>
 </div>
 
 <!--<div class="row marketing">
