addded version to package.jsopn

--- a/app/views/directives/gigThumbnail.html
+++ b/app/views/directives/gigThumbnail.html
@@ -15,7 +15,7 @@
             <span>{{gig.time}}</span>
         </div>
         <div class="row">
-            <span class="span1">Location</span>
+            <span class="span1">Location:</span>
             <span>{{gig.location.address}}</span>
         </div>
         <div class="row">
