--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,9 +14,10 @@
         </li>
     </ul>
 </div>
+<div class="row">
+    <a class="btn btn-lg btn-success" ng-href="#/">Search <span class="glyphicon glyphicon-search"></span></a>
+  </div>
 </div>
-
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Search <span class="glyphicon glyphicon-search"></span></a></p>
 </div>
 
 <!--<div class="row marketing">
