dgig list comig from a service now - still need to get the details for each gig working

--- a/app/views/directives/gigThumbnail.html
+++ b/app/views/directives/gigThumbnail.html
@@ -1,4 +1,4 @@
-<a target="_self" href="gig/{{gig.id}}">
+<a target="_self" href="/gig/{{gig.id}}">
     <div class="well hoverwell" style="background-image: linear-gradient(#484e55, #3a3f44 60%, #313539);">
         <div class="row">
             <img src="{{gig.imageUrl}}" style="width: 20%;" />
